# M2T4Embedded

./: .gitattributes  .gitignore  .project  LICENSE  README.md  build.properties  diff_report.txt  umlgentest.notation  umlgentest.uml  umlgentest_pl_PL.properties
LaunchConfigurations/: .project  Compare with Git and Meld Folder.launch  Compare with Git.launch  Generate Code and Verify with Git.launch  Generate Code and Verify with Meld.launch  Generate.launch  Test Expected.launch  c_expected.launch
c_expected/: .cproject  .gitignore  Makefile  umltest.h
c_expected/Tkind/: Tkind.c
c_expected/src/: sm.c  sm.h  umltest.c  umltest.h
c_expected/src/TJunction/: TJunction.c  TJunction.h
c_expected/src/Tkind/: Tkind.c  Tkind.h
c_expected/src/event_pool/: CMakeLists.txt  event_pool.c  event_pool.h
c_expected/src/fifo/: CMakeLists.txt  fifo.c  fifo.h
c_gen/: sm.c  sm.h  umltest.c  umltest.h
c_gen/TJunction/: TJunction.h
c_gen/events/: events.c  events.h
c_gen/sample/: sample.c  sample.h
c_generated/: .cproject
c_generated/src/: sm.c  sm.h
c_generated/src/TJunction/: TJunction.c  TJunction.h
c_generated/src/Tkind/: Tkind.c  Tkind.h
c_test_expected/: .cproject  .project  CMakeLists.txt
c_test_expected/src/: CMakeLists.txt  all_tests.c
c_test_expected/src/event_pool/: event_pool_test.c  event_pool_test_runner.c
c_test_expected/src/fifo/: fifo_test.c  fifo_test_runner.c
c_test_expected/unity/: CMakeLists.txt
tasks/: generate.xml  generateTarget.xml
tbo.acceleo.psm.uml.gen.c/: .classpath  .project  build.properties
tbo.acceleo.psm.uml.gen.c/tasks/: generate.xml
testdiagrams/: .project  testdiagrams.notation  testdiagrams.uml  umlgentest.aird  umlgentest.notation  umlgentest.uml
testdiagrams/c_expected/: sm.c  sm.h  umltest.c
testdiagrams/c_expected/TJunction/: TJunction.c
testdiagrams/c_expected/Tkind/: Tkind.h
testdiagrams/c_gen/: sm.h  umltest.c  umltest.h
testdiagrams/c_gen/TJunction/: TJunction.c
testdiagrams/sample_filter/: .project  sample_filter_pl_PL.properties
